--- a/GeoDanmarkChecker/ui/geodanmark_checker_dialog_base.ui
+++ b/GeoDanmarkChecker/ui/geodanmark_checker_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>422</width>
-    <height>480</height>
+    <width>409</width>
+    <height>765</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>430</y>
+     <x>60</x>
+     <y>720</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -29,7 +29,7 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QTreeWidget" name="rules_tree">
+  <widget class="RulesTreeWidget" name="rules_validate">
    <property name="geometry">
     <rect>
      <x>25</x>
@@ -90,7 +90,29 @@
     </rect>
    </property>
   </widget>
+  <widget class="RulesTreeWidget" name="rules_compare">
+   <property name="geometry">
+    <rect>
+     <x>25</x>
+     <y>410</y>
+     <width>365</width>
+     <height>300</height>
+    </rect>
+   </property>
+   <column>
+    <property name="text">
+     <string notr="true">1</string>
+    </property>
+   </column>
+  </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>RulesTreeWidget</class>
+   <extends>QTreeWidget</extends>
+   <header>GeoDanmarkChecker.ui.rulestreewidget</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
