--- a/GeoDanmarkChecker/ui/geodanmark_checker_dialog_base.ui
+++ b/GeoDanmarkChecker/ui/geodanmark_checker_dialog_base.ui
@@ -6,105 +6,71 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>409</width>
-    <height>765</height>
+    <width>703</width>
+    <height>552</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>GeoDanmark Checker</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>720</y>
-     <width>341</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="RulesTreeWidget" name="rules_validate">
-   <property name="geometry">
-    <rect>
-     <x>25</x>
-     <y>105</y>
-     <width>365</width>
-     <height>300</height>
-    </rect>
-   </property>
-   <column>
-    <property name="text">
-     <string notr="true">1</string>
-    </property>
-   </column>
-  </widget>
-  <widget class="QPushButton" name="before_dataset">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>160</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Before dataset</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="after_dataset">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>60</y>
-     <width>160</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>After dataset</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="before_dataset_input">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>23</y>
-     <width>200</width>
-     <height>28</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="after_dataset_input">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>63</y>
-     <width>200</width>
-     <height>28</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="RulesTreeWidget" name="rules_compare">
-   <property name="geometry">
-    <rect>
-     <x>25</x>
-     <y>410</y>
-     <width>365</width>
-     <height>300</height>
-    </rect>
-   </property>
-   <column>
-    <property name="text">
-     <string notr="true">1</string>
-    </property>
-   </column>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPushButton" name="after_dataset">
+       <property name="text">
+        <string>GeoDanmark dataset</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="after_dataset_input"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="RulesTreeWidget" name="rules_validate">
+     <column>
+      <property name="text">
+       <string notr="true">1</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="before_dataset">
+       <property name="text">
+        <string>Previous version</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="before_dataset_input"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="RulesTreeWidget" name="rules_compare">
+     <column>
+      <property name="text">
+       <string notr="true">1</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <customwidgets>
   <customwidget>
