enable rules trees and OK button depending on valid file input
closes #14

--- a/GeoDanmarkChecker/ui/geodanmark_checker_dialog_base.ui
+++ b/GeoDanmarkChecker/ui/geodanmark_checker_dialog_base.ui
@@ -30,6 +30,9 @@
    </item>
    <item>
     <widget class="RulesTreeWidget" name="rules_validate">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <column>
       <property name="text">
        <string notr="true">1</string>
@@ -53,6 +56,9 @@
    </item>
    <item>
     <widget class="RulesTreeWidget" name="rules_compare">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <column>
       <property name="text">
        <string notr="true">1</string>
